--- a/git.html
+++ b/git.html
@@ -89,7 +89,17 @@
 		<h4>git remote</h4>
 		<p>git remote add github ssh/https</p>
 		<p>https : minta password setiap kali push</p>
-		<p>ssh : tidak minta password setiap kali push</p>
+		<p>ssh : tidak minta password setiap kali push, tapi harus melakukan konfigurasi ssh</p>
+		<ul>
+			<li>git remote add github ssh/https</li>
+			<li>git remote -v (cek remote)</li>
+			<li>git remote rename nama_lama nama_baru (rename remote)</li>
+			<li>git remote remove nama</li>
+		</ul>
+	</div>
+
+	<div>
+		<h4>git push nama_remote cabang</h4>
 	</div>
 </body>
 </html>
