--- a/firebase.html
+++ b/firebase.html
@@ -22,5 +22,9 @@
 		<h4>error</h4>
 		jika error harus public maka buka file firebase.json lalu bagian public ganti "."
 	</div>
+	<div>
+		<h4>info</h4>
+		<p>firebase lebih baik menggunakan denomalisasi</p>
+	</div>
 </body>
 </html>
